# docs/swagger.yaml
@@ -59,14 +59,48 @@ paths:
           schema:
             $ref: '#/definitions/domain.ErrorResponse'
         "409":
-          description: 'Cliente já cadastrado (Regra de negócio: Email duplicado)'
+          description: Cliente já cadastrado (Email ou Telefone já existe)
           schema:
             $ref: '#/definitions/domain.ErrorResponse'
         "500":
-          description: Falha na persistência de dados ou erro interno" // <--- NOVO
+          description: Falha na persistência de dados ou erro interno
           schema:
             $ref: '#/definitions/domain.ErrorResponse'
       summary: Cadastra um novo cliente
+      tags:
+      - Clientes
+  /clientes/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Retorna os dados de um cliente específico usando seu ID.
+      parameters:
+      - description: ID do Cliente
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Cliente encontrado com sucesso
+          schema:
+            $ref: '#/definitions/domain.Cliente'
+        "400":
+          description: 'ID inválido fornecido (ex: formato incorreto se houver validação
+            de formato de ID)'
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+        "404":
+          description: Cliente não encontrado
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+        "500":
+          description: Erro interno do servidor ou falha de infraestrutura
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+      summary: Busca um cliente pelo ID
       tags:
       - Clientes
 swagger: "2.0"
